@@ -1,5 +1,6 @@
 package org.otpr11.itassetmanagementapp.ui.controllers;
 
+import static org.otpr11.itassetmanagementapp.utils.JFXUtils.createTextFieldValidator;
 import static org.otpr11.itassetmanagementapp.utils.JFXUtils.getChoiceIndex;
 import static org.otpr11.itassetmanagementapp.utils.JFXUtils.select;
 
@@ -9,9 +10,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.ResourceBundle;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
-import javafx.beans.property.StringProperty;
 import javafx.collections.ListChangeListener;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
@@ -31,16 +30,25 @@ import lombok.val;
 import net.synedra.validatorfx.Validator;
 import org.controlsfx.control.CheckComboBox;
 import org.otpr11.itassetmanagementapp.Main;
+import org.otpr11.itassetmanagementapp.constants.DatabaseEvent;
 import org.otpr11.itassetmanagementapp.constants.DeviceStatus;
 import org.otpr11.itassetmanagementapp.constants.DeviceType;
+import org.otpr11.itassetmanagementapp.db.core.DTO;
+import org.otpr11.itassetmanagementapp.db.core.DatabaseEventPropagator;
 import org.otpr11.itassetmanagementapp.db.dao.GlobalDAO;
 import org.otpr11.itassetmanagementapp.db.model.Configuration;
+import org.otpr11.itassetmanagementapp.db.model.DesktopConfiguration;
 import org.otpr11.itassetmanagementapp.db.model.Device;
+import org.otpr11.itassetmanagementapp.db.model.LaptopConfiguration;
 import org.otpr11.itassetmanagementapp.db.model.Location;
 import org.otpr11.itassetmanagementapp.db.model.OperatingSystem;
 import org.otpr11.itassetmanagementapp.db.model.Status;
 import org.otpr11.itassetmanagementapp.db.model.User;
+import org.otpr11.itassetmanagementapp.interfaces.DatabaseEventListener;
+import org.otpr11.itassetmanagementapp.interfaces.LocaleChangeListener;
+import org.otpr11.itassetmanagementapp.interfaces.PrettyStringifiable;
 import org.otpr11.itassetmanagementapp.interfaces.ViewController;
+import org.otpr11.itassetmanagementapp.locale.LocaleEngine;
 import org.otpr11.itassetmanagementapp.utils.AlertUtils;
 import org.otpr11.itassetmanagementapp.utils.StringUtils;
 
@@ -51,24 +59,33 @@ import org.otpr11.itassetmanagementapp.utils.StringUtils;
  * whether a device is being created or edited.
  */
 @Log4j2
-public class DeviceEditorController implements Initializable, ViewController {
+public class DeviceEditorController
+    implements Initializable, ViewController, LocaleChangeListener, DatabaseEventListener {
   private static final DeviceType DEFAULT_DEVICE_TYPE = DeviceType.LAPTOP;
   private static final DeviceStatus DEFAULT_DEVICE_STATUS = DeviceStatus.VACANT;
-  private static final String SELECTOR_DEFAULT_TITLE = "Select...";
+  private static ResourceBundle locale = LocaleEngine.getResourceBundle();
+  private static final String SELECTOR_DEFAULT_TITLE = locale.getString("selector_default_title");
   private static boolean IS_EDIT_MODE;
-
   private final GlobalDAO dao = GlobalDAO.getInstance();
   private final Validator validator = new Validator();
+
   private final List<String> deviceTypes =
-      Arrays.stream(DeviceType.values()).map(DeviceType::toString).collect(Collectors.toList());
+      Arrays.stream(DeviceType.values())
+          .map(DeviceType::toString)
+          .map(type -> DeviceType.getLocalised(DeviceType.fromString(type)))
+          .toList();
   private final List<String> deviceStatuses =
-      dao.statuses.getAll().stream().map(Status::toString).collect(Collectors.toList());
-  private final List<String> users =
-      dao.users.getAll().stream().map(User::getId).collect(Collectors.toList());
-  private final List<String> locations =
+      dao.statuses.getAll().stream()
+          .map(Status::toString)
+          .map(status -> DeviceStatus.getLocalised(DeviceStatus.fromString(status)))
+          .toList();
+  private List<String> locations =
       dao.locations.getAll().stream().map(Location::getId).collect(Collectors.toList());
-  private final List<String> operatingSystems =
+  private List<String> users =
+      dao.users.getAll().stream().map(User::getId).collect(Collectors.toList());
+  private List<String> operatingSystems =
       dao.operatingSystems.getAll().stream().map(OperatingSystem::toPrettyString).toList();
+
   private Device device = new Device();
   private List<String> configs = formatRelevantHWConfigs(DEFAULT_DEVICE_TYPE);
 
@@ -76,8 +93,23 @@ public class DeviceEditorController implements Initializable, ViewController {
   @Setter private Stage stage;
   @Setter private Object sceneChangeData;
 
-  @FXML private CheckComboBox<String> osSelector;
-  @FXML private ChoiceBox<String> deviceTypeSelector;
+  // FXML for the attributes and boxes of the device view
+  @FXML
+  private Text deviceTypeText,
+      basicInfoText,
+      deviceIDText,
+      nicknameText,
+      manufacturerText,
+      modelNameText,
+      modelIDText,
+      modelYearText,
+      macAddressText,
+      configSelectorText,
+      osSelectorText,
+      metaText,
+      userText,
+      locationText,
+      statusText;
   @FXML
   private TextField deviceIDField,
       manufacturerField,
@@ -94,34 +126,45 @@ public class DeviceEditorController implements Initializable, ViewController {
       cancelButton;
   @FXML private ComboBox<String> configSelector, statusSelector, userSelector, locationSelector;
   @FXML private ComboBox<Integer> modelYearSelector;
-  @FXML private Text configSelectorTitle, osSelectorTitle;
+  @FXML private CheckComboBox<String> osSelector;
+  @FXML private ChoiceBox<String> deviceTypeSelector;
 
+  /** Text field validations for text fields Initializing the start of the device editor view */
   @Override
   public void initialize(URL url, ResourceBundle rb) {
+    DatabaseEventPropagator.addListener(this);
+    LocaleEngine.addListener(this);
+
     // Init freeform text field validators
-    createTextFieldValidator(deviceIDField, "deviceID", deviceIDField.textProperty());
-    createTextFieldValidator(manufacturerField, "manufacturer", manufacturerField.textProperty());
-    createTextFieldValidator(modelIDField, "modelID", modelIDField.textProperty());
-    createTextFieldValidator(modelNameField, "modelName", modelNameField.textProperty());
-    createTextFieldValidator(nicknameField, "nickname", nicknameField.textProperty());
-    createTextFieldValidator(macAddressField, "macAddress", macAddressField.textProperty());
+    createTextFieldValidator(validator, deviceIDField, "deviceID", deviceIDField.textProperty());
+    createTextFieldValidator(
+        validator, manufacturerField, "manufacturer", manufacturerField.textProperty());
+    createTextFieldValidator(validator, modelIDField, "modelID", modelIDField.textProperty());
+    createTextFieldValidator(validator, modelNameField, "modelName", modelNameField.textProperty());
+    createTextFieldValidator(validator, nicknameField, "nickname", nicknameField.textProperty());
+    createTextFieldValidator(
+        validator, macAddressField, "macAddress", macAddressField.textProperty());
 
     // Init dropdowns
-    initDropdown(statusSelector, deviceStatuses, DEFAULT_DEVICE_STATUS.toString());
-    initDropdown(deviceTypeSelector, deviceTypes, DEFAULT_DEVICE_TYPE.toString());
+
+    initDropdown(statusSelector, deviceStatuses, DeviceStatus.getLocalised(DEFAULT_DEVICE_STATUS));
+    initDropdown(deviceTypeSelector, deviceTypes, DeviceType.getLocalised(DEFAULT_DEVICE_TYPE));
     initDropdown(userSelector, users, true);
     initDropdown(locationSelector, locations, true);
     initDropdown(configSelector, configs, false);
 
     // Update HW configs when device type changes
+
     deviceTypeSelector.setOnAction(
         event -> {
-          val type = DeviceType.valueOf(deviceTypeSelector.getSelectionModel().getSelectedItem());
+          val type =
+              DeviceType.fromString(deviceTypeSelector.getSelectionModel().getSelectedItem());
           updateAvailableHWConfigs(type);
         });
 
     // Init OS selector
     // Needed for reassignment in lambda
+
     var ref =
         new Object() {
           String lastChange = "";
@@ -155,17 +198,26 @@ public class DeviceEditorController implements Initializable, ViewController {
                 });
 
     // Listen for status being set to VACANT, and remove user if selected
+    // FIXME: These could be moved to onLocaleChange() eventually, but that's not necessary for now
+    configSelector.setValue(SELECTOR_DEFAULT_TITLE);
+    userSelector.setValue(SELECTOR_DEFAULT_TITLE);
+    locationSelector.setValue(SELECTOR_DEFAULT_TITLE);
+
     statusSelector
         .getSelectionModel()
         .selectedItemProperty()
         .addListener(
             (options, oldValue, newValue) -> {
-              if (newValue.equals(DeviceStatus.VACANT.toString())) {
+              if (newValue.equals(DeviceStatus.getLocalised(DeviceStatus.VACANT))) {
                 val result =
                     AlertUtils.showAlert(
                         AlertType.CONFIRMATION,
-                        "Set status to VACANT and remove user?",
-                        "Setting device status to VACANT will remove its current user. Are you sure you want to proceed?");
+                        locale
+                            .getString("status_vacant_confirmation")
+                            .formatted(DeviceStatus.getLocalised(DeviceStatus.VACANT)),
+                        locale
+                            .getString("status_vacant_confirmation_detail")
+                            .formatted(DeviceStatus.getLocalised(DeviceStatus.VACANT)));
 
                 if (result.getButtonData() == ButtonData.OK_DONE) {
                   userSelector.getSelectionModel().selectFirst();
@@ -173,21 +225,31 @@ public class DeviceEditorController implements Initializable, ViewController {
               }
             });
 
+    // Making the list of selectable manufacturer years into the dropdown view starting from current
+    // year.
+
     for (int year = Year.now().getValue(); year >= 1970; year--) {
       modelYearSelector.getItems().add(year);
     }
+
+    // Setting default values for fields
 
     select(modelYearSelector, Year.now().getValue());
     configSelector.setValue(SELECTOR_DEFAULT_TITLE);
     userSelector.setValue(SELECTOR_DEFAULT_TITLE);
     locationSelector.setValue(SELECTOR_DEFAULT_TITLE);
 
-    addHWConfigButton.setOnAction(event -> main.showHWConfigEditor(null));
+    // Actions for adding buttons
+
+    addHWConfigButton.setOnAction(
+        event -> main.showHWConfigEditor(DeviceType.fromString(deviceTypeSelector.getValue())));
     addOSButton.setOnAction(event -> main.showOSEditor(null));
     addUserButton.setOnAction(event -> main.showUserEditor(null));
     addLocationButton.setOnAction(event -> main.showLocationEditor(null));
     okButton.setOnAction(this::onSave);
     cancelButton.setOnAction(this::onCancel);
+
+    onLocaleChange();
   }
 
   @SuppressWarnings({"unchecked", "rawtypes"})
@@ -213,46 +275,56 @@ public class DeviceEditorController implements Initializable, ViewController {
 
   private void onSave(ActionEvent event) {
     // Reset old colorings
-    configSelectorTitle.setFill(null);
-    osSelectorTitle.setFill(null);
+    configSelectorText.setFill(null);
+    osSelectorText.setFill(null);
 
     val noConfig = configSelector.getSelectionModel().getSelectedIndex() == -1;
     val noOS = osSelector.getCheckModel().getCheckedItems().size() == 0;
 
     if (validator.containsWarnings() || validator.containsErrors() || noConfig || noOS) {
       AlertUtils.showAlert(
-          AlertType.ERROR, "Invalid input", "One or more required values are missing or invalid.");
+          AlertType.ERROR,
+          locale.getString("invalid_input"),
+          locale.getString("invalid_input_detail"));
 
       if (noConfig) {
-        // FIXME: Replace with localised version, this won't reset now, but it doesn't matter as we
-        // need to get it from locale anyway
-        configSelectorTitle.setText("⚠️ " + configSelectorTitle.getText());
-        configSelectorTitle.setFill(Color.RED);
+        configSelectorText.setText("⚠️ " + locale.getString("hardware_configuration"));
+        configSelectorText.setFill(Color.RED);
+      } else {
+        configSelectorText.setText(locale.getString("hardware_configuration"));
+        configSelectorText.setFill(Color.BLACK);
       }
 
       if (noOS) {
-        // FIXME: Replace with localised version, this won't reset now, but it doesn't matter as we
-        // need to get it from locale anyway
-        osSelectorTitle.setText("⚠️ " + osSelectorTitle.getText());
-        osSelectorTitle.setFill(Color.RED);
+        osSelectorText.setText("⚠️ " + locale.getString("operating_system"));
+        osSelectorText.setFill(Color.RED);
+      } else {
+        osSelectorText.setText(locale.getString("operating_system"));
+        osSelectorText.setFill(Color.BLACK);
       }
     } else if (statusSelector
             .getSelectionModel()
             .getSelectedItem()
-            .equals(DeviceStatus.IN_USE.toString())
+            .equals(DeviceStatus.getLocalised(DeviceStatus.IN_USE))
         && getChoiceIndex(userSelector) <= 0) {
       AlertUtils.showAlert(
           AlertType.ERROR,
-          "Status set to IN_USE, but device has no user",
-          "A device cannot be set to status IN_USE without a user being selected.");
+          locale
+              .getString("status_in_use_no_user")
+              .formatted(DeviceStatus.getLocalised(DeviceStatus.IN_USE)),
+          locale
+              .getString("status_in_use_no_user_detail")
+              .formatted(DeviceStatus.getLocalised(DeviceStatus.IN_USE)));
     } else if (!IS_EDIT_MODE && dao.devices.get(deviceIDField.getText()) != null) {
       AlertUtils.showAlert(
-          AlertType.ERROR, "Duplicate ID detected", "A device with this ID already exists.");
+          AlertType.ERROR,
+          locale.getString("duplicate_id"),
+          locale.getString("duplicate_id_detail"));
     } else if (IS_EDIT_MODE && !deviceIDField.getText().equals(device.getId())) {
       AlertUtils.showAlert(
           AlertType.ERROR,
-          "Attempted device overwrite detected",
-          "A device with the ID you're changing this device's ID to already exists.");
+          locale.getString("id_overwrite"),
+          locale.getString("id_overwrite_detail"));
     } else {
       // Set basic properties
       device.setId(deviceIDField.getText());
@@ -265,7 +337,7 @@ public class DeviceEditorController implements Initializable, ViewController {
 
       // Determine selected hardware configuration
       val hwConfig =
-          getRelevantHWConfigs(DeviceType.valueOf(deviceTypeSelector.getValue()))
+          getRelevantHWConfigs(DeviceType.fromString(deviceTypeSelector.getValue()))
               .get(getChoiceIndex(configSelector));
 
       // Determine selected operating systems
@@ -288,6 +360,8 @@ public class DeviceEditorController implements Initializable, ViewController {
         // Since this field is nullable, our indices get pushed 1 index forwards
         val user = dao.users.getAll().get(getChoiceIndex(userSelector) - 1);
         device.setUser(user);
+      } else if (IS_EDIT_MODE) {
+        device.setUser(null);
       }
 
       // If location is selected (optional)
@@ -295,6 +369,8 @@ public class DeviceEditorController implements Initializable, ViewController {
         // Since this field is nullable, our indices get pushed 1 index forwards
         val location = dao.locations.getAll().get(getChoiceIndex(locationSelector) - 1);
         device.setLocation(location);
+      } else if (IS_EDIT_MODE) {
+        device.setLocation(null);
       }
 
       device.setStatus(status);
@@ -303,13 +379,15 @@ public class DeviceEditorController implements Initializable, ViewController {
       val success = dao.devices.save(device);
 
       if (!success) {
-        AlertUtils.showAlert(AlertType.ERROR, "Error", "Could not save device.");
+        AlertUtils.showAlert(
+            AlertType.ERROR, locale.getString("error"), locale.getString("could_not_save_device"));
       } else {
         stage.close();
       }
     }
   }
 
+  /** Functional cancel button */
   private void onCancel(ActionEvent event) {
     stage.close();
   }
@@ -319,42 +397,32 @@ public class DeviceEditorController implements Initializable, ViewController {
     initDropdown(configSelector, configs, configs.get(0));
   }
 
+  /**
+   * This alternate update function monkey-patches in support for adding a newly created entity to
+   * the available hardware configurations. This is because Hibernate events propagate before a
+   * database query will respond with the newly created entity it just told you it created, because
+   * that totally makes sense.
+   *
+   * @param deviceType {@link DeviceType} to list hardware configurations for.
+   * @param newEntity A newly created hardware configuration
+   */
+  private void updateAvailableHWConfigs(DeviceType deviceType, DTO newEntity) {
+    configs = formatRelevantHWConfigs(deviceType);
+    val stringTarget = (PrettyStringifiable) newEntity;
+    configs.add(stringTarget.toPrettyString());
+    initDropdown(configSelector, configs, stringTarget.toPrettyString());
+  }
+
   private List<String> formatRelevantHWConfigs(DeviceType deviceType) {
     return getRelevantHWConfigs(deviceType).stream()
         .map(StringUtils::getPrettyHWConfig)
-        .collect(Collectors.toList());
+        .collect(Collectors.toList()); // Need mutability for this one
   }
 
   private List<Configuration> getRelevantHWConfigs(DeviceType deviceType) {
     return dao.configurations.getAll().stream()
         .filter(cfg -> cfg.getDeviceType() == deviceType)
-        .collect(Collectors.toList());
-  }
-
-  // TODO: More sophisticated validation for MAC addresses, number fields, etc.
-  private void createTextFieldValidator(TextField field, String key, StringProperty prop) {
-    val edited = new AtomicBoolean(false);
-
-    validator
-        .createCheck()
-        .dependsOn(key, prop)
-        .withMethod(
-            ctx -> {
-              val warn = "Required field.";
-              val error = "Please provide a value.";
-              String value = ctx.get(key);
-
-              if (value == null || value.trim().equals("")) {
-                if (!edited.get()) { // Not yet edited, show only warning
-                  ctx.warn(warn);
-                  edited.set(true);
-                } else { // Already edited, show error now
-                  ctx.error(error);
-                }
-              }
-            })
-        .decorates(field)
-        .immediate();
+        .collect(Collectors.toList()); // Need mutability for this one
   }
 
   @Override
@@ -364,7 +432,6 @@ public class DeviceEditorController implements Initializable, ViewController {
         && dao.devices.get((String) sceneChangeData) != null) {
       IS_EDIT_MODE = true;
       log.trace("Editing existing device {}.", sceneChangeData);
-      stage.setTitle("Manage device %s".formatted(sceneChangeData));
 
       // Determine device to edit
       device = dao.devices.get((String) sceneChangeData);
@@ -373,7 +440,7 @@ public class DeviceEditorController implements Initializable, ViewController {
       val cfg = device.getConfiguration();
       select(
           deviceTypeSelector,
-          cfg != null ? cfg.getDeviceType().toString() : DeviceType.LAPTOP.toString());
+          DeviceType.getLocalised(cfg != null ? cfg.getDeviceType() : DEFAULT_DEVICE_TYPE));
 
       deviceIDField.setText(device.getId());
       nicknameField.setText(device.getNickname());
@@ -401,11 +468,86 @@ public class DeviceEditorController implements Initializable, ViewController {
         select(locationSelector, device.getLocation().getId());
       }
 
-      select(statusSelector, device.getStatus().toString());
+      select(
+          statusSelector,
+          DeviceStatus.getLocalised(DeviceStatus.fromString(device.getStatus().toString())));
     } else {
       IS_EDIT_MODE = false;
       log.trace("Registering new device.");
-      stage.setTitle("Create device");
+    }
+
+    val stageTitle = locale.getString("device_editor_stage_title");
+    stage.setTitle(IS_EDIT_MODE ? "%s %s".formatted(stageTitle, sceneChangeData) : stageTitle);
+  }
+
+  @Override
+  public void onLocaleChange() {
+    locale = LocaleEngine.getResourceBundle();
+    deviceTypeText.setText(locale.getString("device_type"));
+    basicInfoText.setText(locale.getString("basic_information"));
+    deviceIDText.setText(locale.getString("device_id"));
+    nicknameText.setText(locale.getString("nickname"));
+    manufacturerText.setText(locale.getString("manufacturer"));
+    modelNameText.setText(locale.getString("model_name"));
+    modelYearText.setText(locale.getString("model_year"));
+    modelIDText.setText(locale.getString("model_id"));
+    macAddressText.setText(locale.getString("mac_address"));
+    configSelectorText.setText(locale.getString("hardware_configuration"));
+    osSelectorText.setText(locale.getString("operating_system"));
+    metaText.setText(locale.getString("metadata"));
+    userText.setText(locale.getString("user"));
+    locationText.setText(locale.getString("location"));
+    statusText.setText(locale.getString("status"));
+    cancelButton.setText(locale.getString("cancel"));
+    okButton.setText(locale.getString("save"));
+  }
+
+  @Override
+  public void onDatabaseEvent(DatabaseEvent event, DTO entity) {
+    if (event == DatabaseEvent.POST_PERSIST) {
+      if (entity instanceof DesktopConfiguration) {
+        updateAvailableHWConfigs(DeviceType.DESKTOP, entity);
+      } else if (entity instanceof LaptopConfiguration) {
+        updateAvailableHWConfigs(DeviceType.LAPTOP, entity);
+      } else if (entity instanceof OperatingSystem) {
+        val list =
+            dao.operatingSystems.getAll().stream()
+                .map(OperatingSystem::toPrettyString)
+                .collect(Collectors.toList());
+
+        val newEntity = ((PrettyStringifiable) entity).toPrettyString();
+        list.add(newEntity);
+        operatingSystems = list;
+
+        osSelector.getItems().add(newEntity);
+
+        // Restore checks
+        val checked = osSelector.getCheckModel();
+        checked.check(newEntity);
+
+        for (val item : checked.getCheckedItems()) {
+          osSelector.getCheckModel().check(item);
+        }
+      } else if (entity instanceof User) {
+        val list = dao.users.getAll().stream().map(User::getId).collect(Collectors.toList());
+        val user = ((User) entity).getId();
+
+        list.add(user);
+        users = list;
+        userSelector.getItems().add(user);
+
+        select(userSelector, user);
+      } else if (entity instanceof Location) {
+        val list =
+            dao.locations.getAll().stream().map(Location::getId).collect(Collectors.toList());
+        val location = ((Location) entity).getId();
+
+        list.add(location);
+        locations = list;
+        locationSelector.getItems().add(location);
+
+        select(locationSelector, location);
+      }
     }
   }
 }
